parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARROW
    ATRIBUTE
    DECIMAL
    DIFFERENT
    DIVIDE
    DOSPUNTOS
    DOT
    GETS
    ID
    MINUS
    NEW
    PLUS
    STRUCT
    TEXTO
    TIMES
    WHILE

Grammar

Rule 0     S' -> sentencia
Rule 1     sentencia -> expresion
Rule 2     sentencia -> instanciacion
Rule 3     sentencia -> declaracion
Rule 4     instanciacion -> SYMBOL ASIGN NUMBER
Rule 5     instanciacion -> SYMBOL ASIGN TEXT
Rule 6     instanciacion -> asignacion_estructuras
Rule 7     declaracion -> CLASS SYMBOL
Rule 8     declaracion -> DEF SYMBOL
Rule 9     expresion -> comentario
Rule 10    expresion -> impresion_puts
Rule 11    expresion -> expresion_valor
Rule 12    expresion -> estructura_control
Rule 13    expresion_valor -> NUMBER
Rule 14    expresion_valor -> TEXT
Rule 15    asignacion_estructuras -> SYMBOL ASIGN estructura_array
Rule 16    asignacion_estructuras -> SYMBOL ASIGN estructura_hash
Rule 17    estructura_array -> LBRACK valor_array RBRACK
Rule 18    valor_array -> NUMBER
Rule 19    valor_array -> TEXT
Rule 20    valor_array -> TEXT COMMA valor_array
Rule 21    valor_array -> NUMBER COMMA valor_array
Rule 22    impresion_puts -> PUTS TEXT
Rule 23    impresion_puts -> PUTS NUMBER
Rule 24    impresion_puts -> PUTS SYMBOL
Rule 25    estructura_control -> bloque_if END
Rule 26    estructura_control -> bloque_if else END
Rule 27    estructura_control -> bloque_for
Rule 28    bloque_if -> IF boolean sentencia
Rule 29    bloque_if -> IF comparacion sentencia
Rule 30    bloque_if -> IF comparacion EQUAL boolean sentencia
Rule 31    else -> ELSE sentencia
Rule 32    boolean -> FALSE
Rule 33    boolean -> TRUE
Rule 34    comparacion -> NUMBER EQUAL NUMBER
Rule 35    comparacion -> NUMBER MAYORQUE NUMBER
Rule 36    comparacion -> NUMBER MENORQUE NUMBER
Rule 37    bloque_for -> FOR SYMBOL IN rango sentencia END
Rule 38    rango -> LPAREN NUMBER RANGE NUMBER RPAREN
Rule 39    estructura_hash -> LKEY valor_hash RKEY
Rule 40    valor_hash -> NUMBER
Rule 41    expresion -> expresion AND expresion
Rule 42    expresion -> expresion OR expresion
Rule 43    expresion -> expresion NOT expresion
Rule 44    expresion -> LPAREN expresion AND expresion RPAREN
Rule 45    expresion -> LPAREN expresion OR expresion RPAREN
Rule 46    expresion -> LPAREN expresion NOT expresion RPAREN
Rule 47    expresion -> expresion MENORQUE expresion
Rule 48    expresion -> expresion MAYORQUE expresion
Rule 49    expresion -> expresion LEQT expresion
Rule 50    expresion -> expresion GEQT expresion
Rule 51    expresion -> expresion EQUAL expresion
Rule 52    expresion -> expresion DIFER expresion
Rule 53    expresion -> LPAREN expresion RPAREN MENORQUE LPAREN expresion RPAREN
Rule 54    expresion -> LPAREN expresion RPAREN MAYORQUE LPAREN expresion RPAREN
Rule 55    expresion -> LPAREN expresion RPAREN LEQT LPAREN expresion RPAREN
Rule 56    expresion -> LPAREN expresion RPAREN GEQT LPAREN expresion RPAREN
Rule 57    expresion -> LPAREN expresion RPAREN ASIGN LPAREN expresion RPAREN
Rule 58    expresion -> LPAREN expresion RPAREN DIFER LPAREN expresion RPAREN
Rule 59    comentario -> COMMENT

Terminals, with rules where they appear

AND                  : 41 44
ARROW                : 
ASIGN                : 4 5 15 16 57
ATRIBUTE             : 
CLASS                : 7
COMMA                : 20 21
COMMENT              : 59
DECIMAL              : 
DEF                  : 8
DIFER                : 52 58
DIFFERENT            : 
DIVIDE               : 
DOSPUNTOS            : 
DOT                  : 
ELSE                 : 31
END                  : 25 26 37
EQUAL                : 30 34 51
FALSE                : 32
FOR                  : 37
GEQT                 : 50 56
GETS                 : 
ID                   : 
IF                   : 28 29 30
IN                   : 37
LBRACK               : 17
LEQT                 : 49 55
LKEY                 : 39
LPAREN               : 38 44 45 46 53 53 54 54 55 55 56 56 57 57 58 58
MAYORQUE             : 35 48 54
MENORQUE             : 36 47 53
MINUS                : 
NEW                  : 
NOT                  : 43 46
NUMBER               : 4 13 18 21 23 34 34 35 35 36 36 38 38 40
OR                   : 42 45
PLUS                 : 
PUTS                 : 22 23 24
RANGE                : 38
RBRACK               : 17
RKEY                 : 39
RPAREN               : 38 44 45 46 53 53 54 54 55 55 56 56 57 57 58 58
STRUCT               : 
SYMBOL               : 4 5 7 8 15 16 24 37
TEXT                 : 5 14 19 20 22
TEXTO                : 
TIMES                : 
TRUE                 : 33
WHILE                : 
error                : 

Nonterminals, with rules where they appear

asignacion_estructuras : 6
bloque_for           : 27
bloque_if            : 25 26
boolean              : 28 30
comentario           : 9
comparacion          : 29 30
declaracion          : 3
else                 : 26
estructura_array     : 15
estructura_control   : 12
estructura_hash      : 16
expresion            : 1 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58
expresion_valor      : 11
impresion_puts       : 10
instanciacion        : 2
rango                : 37
sentencia            : 28 29 30 31 37 0
valor_array          : 17 20 21
valor_hash           : 39

Parsing method: LALR

state 0

    (0) S' -> . sentencia
    (1) sentencia -> . expresion
    (2) sentencia -> . instanciacion
    (3) sentencia -> . declaracion
    (9) expresion -> . comentario
    (10) expresion -> . impresion_puts
    (11) expresion -> . expresion_valor
    (12) expresion -> . estructura_control
    (41) expresion -> . expresion AND expresion
    (42) expresion -> . expresion OR expresion
    (43) expresion -> . expresion NOT expresion
    (44) expresion -> . LPAREN expresion AND expresion RPAREN
    (45) expresion -> . LPAREN expresion OR expresion RPAREN
    (46) expresion -> . LPAREN expresion NOT expresion RPAREN
    (47) expresion -> . expresion MENORQUE expresion
    (48) expresion -> . expresion MAYORQUE expresion
    (49) expresion -> . expresion LEQT expresion
    (50) expresion -> . expresion GEQT expresion
    (51) expresion -> . expresion EQUAL expresion
    (52) expresion -> . expresion DIFER expresion
    (53) expresion -> . LPAREN expresion RPAREN MENORQUE LPAREN expresion RPAREN
    (54) expresion -> . LPAREN expresion RPAREN MAYORQUE LPAREN expresion RPAREN
    (55) expresion -> . LPAREN expresion RPAREN LEQT LPAREN expresion RPAREN
    (56) expresion -> . LPAREN expresion RPAREN GEQT LPAREN expresion RPAREN
    (57) expresion -> . LPAREN expresion RPAREN ASIGN LPAREN expresion RPAREN
    (58) expresion -> . LPAREN expresion RPAREN DIFER LPAREN expresion RPAREN
    (4) instanciacion -> . SYMBOL ASIGN NUMBER
    (5) instanciacion -> . SYMBOL ASIGN TEXT
    (6) instanciacion -> . asignacion_estructuras
    (7) declaracion -> . CLASS SYMBOL
    (8) declaracion -> . DEF SYMBOL
    (59) comentario -> . COMMENT
    (22) impresion_puts -> . PUTS TEXT
    (23) impresion_puts -> . PUTS NUMBER
    (24) impresion_puts -> . PUTS SYMBOL
    (13) expresion_valor -> . NUMBER
    (14) expresion_valor -> . TEXT
    (25) estructura_control -> . bloque_if END
    (26) estructura_control -> . bloque_if else END
    (27) estructura_control -> . bloque_for
    (15) asignacion_estructuras -> . SYMBOL ASIGN estructura_array
    (16) asignacion_estructuras -> . SYMBOL ASIGN estructura_hash
    (28) bloque_if -> . IF boolean sentencia
    (29) bloque_if -> . IF comparacion sentencia
    (30) bloque_if -> . IF comparacion EQUAL boolean sentencia
    (37) bloque_for -> . FOR SYMBOL IN rango sentencia END

    LPAREN          shift and go to state 9
    SYMBOL          shift and go to state 10
    CLASS           shift and go to state 14
    DEF             shift and go to state 15
    COMMENT         shift and go to state 16
    PUTS            shift and go to state 17
    NUMBER          shift and go to state 11
    TEXT            shift and go to state 12
    IF              shift and go to state 20
    FOR             shift and go to state 21

    sentencia                      shift and go to state 1
    expresion                      shift and go to state 2
    instanciacion                  shift and go to state 3
    declaracion                    shift and go to state 4
    comentario                     shift and go to state 5
    impresion_puts                 shift and go to state 6
    expresion_valor                shift and go to state 7
    estructura_control             shift and go to state 8
    asignacion_estructuras         shift and go to state 13
    bloque_if                      shift and go to state 18
    bloque_for                     shift and go to state 19

state 1

    (0) S' -> sentencia .



state 2

    (1) sentencia -> expresion .
    (41) expresion -> expresion . AND expresion
    (42) expresion -> expresion . OR expresion
    (43) expresion -> expresion . NOT expresion
    (47) expresion -> expresion . MENORQUE expresion
    (48) expresion -> expresion . MAYORQUE expresion
    (49) expresion -> expresion . LEQT expresion
    (50) expresion -> expresion . GEQT expresion
    (51) expresion -> expresion . EQUAL expresion
    (52) expresion -> expresion . DIFER expresion

    $end            reduce using rule 1 (sentencia -> expresion .)
    END             reduce using rule 1 (sentencia -> expresion .)
    ELSE            reduce using rule 1 (sentencia -> expresion .)
    AND             shift and go to state 22
    OR              shift and go to state 23
    NOT             shift and go to state 24
    MENORQUE        shift and go to state 25
    MAYORQUE        shift and go to state 26
    LEQT            shift and go to state 27
    GEQT            shift and go to state 28
    EQUAL           shift and go to state 29
    DIFER           shift and go to state 30


state 3

    (2) sentencia -> instanciacion .

    $end            reduce using rule 2 (sentencia -> instanciacion .)
    END             reduce using rule 2 (sentencia -> instanciacion .)
    ELSE            reduce using rule 2 (sentencia -> instanciacion .)


state 4

    (3) sentencia -> declaracion .

    $end            reduce using rule 3 (sentencia -> declaracion .)
    END             reduce using rule 3 (sentencia -> declaracion .)
    ELSE            reduce using rule 3 (sentencia -> declaracion .)


state 5

    (9) expresion -> comentario .

    AND             reduce using rule 9 (expresion -> comentario .)
    OR              reduce using rule 9 (expresion -> comentario .)
    NOT             reduce using rule 9 (expresion -> comentario .)
    MENORQUE        reduce using rule 9 (expresion -> comentario .)
    MAYORQUE        reduce using rule 9 (expresion -> comentario .)
    LEQT            reduce using rule 9 (expresion -> comentario .)
    GEQT            reduce using rule 9 (expresion -> comentario .)
    EQUAL           reduce using rule 9 (expresion -> comentario .)
    DIFER           reduce using rule 9 (expresion -> comentario .)
    $end            reduce using rule 9 (expresion -> comentario .)
    RPAREN          reduce using rule 9 (expresion -> comentario .)
    END             reduce using rule 9 (expresion -> comentario .)
    ELSE            reduce using rule 9 (expresion -> comentario .)


state 6

    (10) expresion -> impresion_puts .

    AND             reduce using rule 10 (expresion -> impresion_puts .)
    OR              reduce using rule 10 (expresion -> impresion_puts .)
    NOT             reduce using rule 10 (expresion -> impresion_puts .)
    MENORQUE        reduce using rule 10 (expresion -> impresion_puts .)
    MAYORQUE        reduce using rule 10 (expresion -> impresion_puts .)
    LEQT            reduce using rule 10 (expresion -> impresion_puts .)
    GEQT            reduce using rule 10 (expresion -> impresion_puts .)
    EQUAL           reduce using rule 10 (expresion -> impresion_puts .)
    DIFER           reduce using rule 10 (expresion -> impresion_puts .)
    $end            reduce using rule 10 (expresion -> impresion_puts .)
    RPAREN          reduce using rule 10 (expresion -> impresion_puts .)
    END             reduce using rule 10 (expresion -> impresion_puts .)
    ELSE            reduce using rule 10 (expresion -> impresion_puts .)


state 7

    (11) expresion -> expresion_valor .

    AND             reduce using rule 11 (expresion -> expresion_valor .)
    OR              reduce using rule 11 (expresion -> expresion_valor .)
    NOT             reduce using rule 11 (expresion -> expresion_valor .)
    MENORQUE        reduce using rule 11 (expresion -> expresion_valor .)
    MAYORQUE        reduce using rule 11 (expresion -> expresion_valor .)
    LEQT            reduce using rule 11 (expresion -> expresion_valor .)
    GEQT            reduce using rule 11 (expresion -> expresion_valor .)
    EQUAL           reduce using rule 11 (expresion -> expresion_valor .)
    DIFER           reduce using rule 11 (expresion -> expresion_valor .)
    $end            reduce using rule 11 (expresion -> expresion_valor .)
    RPAREN          reduce using rule 11 (expresion -> expresion_valor .)
    END             reduce using rule 11 (expresion -> expresion_valor .)
    ELSE            reduce using rule 11 (expresion -> expresion_valor .)


state 8

    (12) expresion -> estructura_control .

    AND             reduce using rule 12 (expresion -> estructura_control .)
    OR              reduce using rule 12 (expresion -> estructura_control .)
    NOT             reduce using rule 12 (expresion -> estructura_control .)
    MENORQUE        reduce using rule 12 (expresion -> estructura_control .)
    MAYORQUE        reduce using rule 12 (expresion -> estructura_control .)
    LEQT            reduce using rule 12 (expresion -> estructura_control .)
    GEQT            reduce using rule 12 (expresion -> estructura_control .)
    EQUAL           reduce using rule 12 (expresion -> estructura_control .)
    DIFER           reduce using rule 12 (expresion -> estructura_control .)
    $end            reduce using rule 12 (expresion -> estructura_control .)
    RPAREN          reduce using rule 12 (expresion -> estructura_control .)
    END             reduce using rule 12 (expresion -> estructura_control .)
    ELSE            reduce using rule 12 (expresion -> estructura_control .)


state 9

    (44) expresion -> LPAREN . expresion AND expresion RPAREN
    (45) expresion -> LPAREN . expresion OR expresion RPAREN
    (46) expresion -> LPAREN . expresion NOT expresion RPAREN
    (53) expresion -> LPAREN . expresion RPAREN MENORQUE LPAREN expresion RPAREN
    (54) expresion -> LPAREN . expresion RPAREN MAYORQUE LPAREN expresion RPAREN
    (55) expresion -> LPAREN . expresion RPAREN LEQT LPAREN expresion RPAREN
    (56) expresion -> LPAREN . expresion RPAREN GEQT LPAREN expresion RPAREN
    (57) expresion -> LPAREN . expresion RPAREN ASIGN LPAREN expresion RPAREN
    (58) expresion -> LPAREN . expresion RPAREN DIFER LPAREN expresion RPAREN
    (9) expresion -> . comentario
    (10) expresion -> . impresion_puts
    (11) expresion -> . expresion_valor
    (12) expresion -> . estructura_control
    (41) expresion -> . expresion AND expresion
    (42) expresion -> . expresion OR expresion
    (43) expresion -> . expresion NOT expresion
    (44) expresion -> . LPAREN expresion AND expresion RPAREN
    (45) expresion -> . LPAREN expresion OR expresion RPAREN
    (46) expresion -> . LPAREN expresion NOT expresion RPAREN
    (47) expresion -> . expresion MENORQUE expresion
    (48) expresion -> . expresion MAYORQUE expresion
    (49) expresion -> . expresion LEQT expresion
    (50) expresion -> . expresion GEQT expresion
    (51) expresion -> . expresion EQUAL expresion
    (52) expresion -> . expresion DIFER expresion
    (53) expresion -> . LPAREN expresion RPAREN MENORQUE LPAREN expresion RPAREN
    (54) expresion -> . LPAREN expresion RPAREN MAYORQUE LPAREN expresion RPAREN
    (55) expresion -> . LPAREN expresion RPAREN LEQT LPAREN expresion RPAREN
    (56) expresion -> . LPAREN expresion RPAREN GEQT LPAREN expresion RPAREN
    (57) expresion -> . LPAREN expresion RPAREN ASIGN LPAREN expresion RPAREN
    (58) expresion -> . LPAREN expresion RPAREN DIFER LPAREN expresion RPAREN
    (59) comentario -> . COMMENT
    (22) impresion_puts -> . PUTS TEXT
    (23) impresion_puts -> . PUTS NUMBER
    (24) impresion_puts -> . PUTS SYMBOL
    (13) expresion_valor -> . NUMBER
    (14) expresion_valor -> . TEXT
    (25) estructura_control -> . bloque_if END
    (26) estructura_control -> . bloque_if else END
    (27) estructura_control -> . bloque_for
    (28) bloque_if -> . IF boolean sentencia
    (29) bloque_if -> . IF comparacion sentencia
    (30) bloque_if -> . IF comparacion EQUAL boolean sentencia
    (37) bloque_for -> . FOR SYMBOL IN rango sentencia END

    LPAREN          shift and go to state 9
    COMMENT         shift and go to state 16
    PUTS            shift and go to state 17
    NUMBER          shift and go to state 11
    TEXT            shift and go to state 12
    IF              shift and go to state 20
    FOR             shift and go to state 21

    expresion                      shift and go to state 31
    comentario                     shift and go to state 5
    impresion_puts                 shift and go to state 6
    expresion_valor                shift and go to state 7
    estructura_control             shift and go to state 8
    bloque_if                      shift and go to state 18
    bloque_for                     shift and go to state 19

state 10

    (4) instanciacion -> SYMBOL . ASIGN NUMBER
    (5) instanciacion -> SYMBOL . ASIGN TEXT
    (15) asignacion_estructuras -> SYMBOL . ASIGN estructura_array
    (16) asignacion_estructuras -> SYMBOL . ASIGN estructura_hash

    ASIGN           shift and go to state 32


state 11

    (13) expresion_valor -> NUMBER .

    AND             reduce using rule 13 (expresion_valor -> NUMBER .)
    OR              reduce using rule 13 (expresion_valor -> NUMBER .)
    NOT             reduce using rule 13 (expresion_valor -> NUMBER .)
    MENORQUE        reduce using rule 13 (expresion_valor -> NUMBER .)
    MAYORQUE        reduce using rule 13 (expresion_valor -> NUMBER .)
    LEQT            reduce using rule 13 (expresion_valor -> NUMBER .)
    GEQT            reduce using rule 13 (expresion_valor -> NUMBER .)
    EQUAL           reduce using rule 13 (expresion_valor -> NUMBER .)
    DIFER           reduce using rule 13 (expresion_valor -> NUMBER .)
    $end            reduce using rule 13 (expresion_valor -> NUMBER .)
    RPAREN          reduce using rule 13 (expresion_valor -> NUMBER .)
    END             reduce using rule 13 (expresion_valor -> NUMBER .)
    ELSE            reduce using rule 13 (expresion_valor -> NUMBER .)


state 12

    (14) expresion_valor -> TEXT .

    AND             reduce using rule 14 (expresion_valor -> TEXT .)
    OR              reduce using rule 14 (expresion_valor -> TEXT .)
    NOT             reduce using rule 14 (expresion_valor -> TEXT .)
    MENORQUE        reduce using rule 14 (expresion_valor -> TEXT .)
    MAYORQUE        reduce using rule 14 (expresion_valor -> TEXT .)
    LEQT            reduce using rule 14 (expresion_valor -> TEXT .)
    GEQT            reduce using rule 14 (expresion_valor -> TEXT .)
    EQUAL           reduce using rule 14 (expresion_valor -> TEXT .)
    DIFER           reduce using rule 14 (expresion_valor -> TEXT .)
    $end            reduce using rule 14 (expresion_valor -> TEXT .)
    RPAREN          reduce using rule 14 (expresion_valor -> TEXT .)
    END             reduce using rule 14 (expresion_valor -> TEXT .)
    ELSE            reduce using rule 14 (expresion_valor -> TEXT .)


state 13

    (6) instanciacion -> asignacion_estructuras .

    $end            reduce using rule 6 (instanciacion -> asignacion_estructuras .)
    END             reduce using rule 6 (instanciacion -> asignacion_estructuras .)
    ELSE            reduce using rule 6 (instanciacion -> asignacion_estructuras .)


state 14

    (7) declaracion -> CLASS . SYMBOL

    SYMBOL          shift and go to state 33


state 15

    (8) declaracion -> DEF . SYMBOL

    SYMBOL          shift and go to state 34


state 16

    (59) comentario -> COMMENT .

    AND             reduce using rule 59 (comentario -> COMMENT .)
    OR              reduce using rule 59 (comentario -> COMMENT .)
    NOT             reduce using rule 59 (comentario -> COMMENT .)
    MENORQUE        reduce using rule 59 (comentario -> COMMENT .)
    MAYORQUE        reduce using rule 59 (comentario -> COMMENT .)
    LEQT            reduce using rule 59 (comentario -> COMMENT .)
    GEQT            reduce using rule 59 (comentario -> COMMENT .)
    EQUAL           reduce using rule 59 (comentario -> COMMENT .)
    DIFER           reduce using rule 59 (comentario -> COMMENT .)
    $end            reduce using rule 59 (comentario -> COMMENT .)
    RPAREN          reduce using rule 59 (comentario -> COMMENT .)
    END             reduce using rule 59 (comentario -> COMMENT .)
    ELSE            reduce using rule 59 (comentario -> COMMENT .)


state 17

    (22) impresion_puts -> PUTS . TEXT
    (23) impresion_puts -> PUTS . NUMBER
    (24) impresion_puts -> PUTS . SYMBOL

    TEXT            shift and go to state 35
    NUMBER          shift and go to state 36
    SYMBOL          shift and go to state 37


state 18

    (25) estructura_control -> bloque_if . END
    (26) estructura_control -> bloque_if . else END
    (31) else -> . ELSE sentencia

    END             shift and go to state 38
    ELSE            shift and go to state 40

    else                           shift and go to state 39

state 19

    (27) estructura_control -> bloque_for .

    AND             reduce using rule 27 (estructura_control -> bloque_for .)
    OR              reduce using rule 27 (estructura_control -> bloque_for .)
    NOT             reduce using rule 27 (estructura_control -> bloque_for .)
    MENORQUE        reduce using rule 27 (estructura_control -> bloque_for .)
    MAYORQUE        reduce using rule 27 (estructura_control -> bloque_for .)
    LEQT            reduce using rule 27 (estructura_control -> bloque_for .)
    GEQT            reduce using rule 27 (estructura_control -> bloque_for .)
    EQUAL           reduce using rule 27 (estructura_control -> bloque_for .)
    DIFER           reduce using rule 27 (estructura_control -> bloque_for .)
    $end            reduce using rule 27 (estructura_control -> bloque_for .)
    RPAREN          reduce using rule 27 (estructura_control -> bloque_for .)
    END             reduce using rule 27 (estructura_control -> bloque_for .)
    ELSE            reduce using rule 27 (estructura_control -> bloque_for .)


state 20

    (28) bloque_if -> IF . boolean sentencia
    (29) bloque_if -> IF . comparacion sentencia
    (30) bloque_if -> IF . comparacion EQUAL boolean sentencia
    (32) boolean -> . FALSE
    (33) boolean -> . TRUE
    (34) comparacion -> . NUMBER EQUAL NUMBER
    (35) comparacion -> . NUMBER MAYORQUE NUMBER
    (36) comparacion -> . NUMBER MENORQUE NUMBER

    FALSE           shift and go to state 43
    TRUE            shift and go to state 44
    NUMBER          shift and go to state 45

    boolean                        shift and go to state 41
    comparacion                    shift and go to state 42

state 21

    (37) bloque_for -> FOR . SYMBOL IN rango sentencia END

    SYMBOL          shift and go to state 46


state 22

    (41) expresion -> expresion AND . expresion
    (9) expresion -> . comentario
    (10) expresion -> . impresion_puts
    (11) expresion -> . expresion_valor
    (12) expresion -> . estructura_control
    (41) expresion -> . expresion AND expresion
    (42) expresion -> . expresion OR expresion
    (43) expresion -> . expresion NOT expresion
    (44) expresion -> . LPAREN expresion AND expresion RPAREN
    (45) expresion -> . LPAREN expresion OR expresion RPAREN
    (46) expresion -> . LPAREN expresion NOT expresion RPAREN
    (47) expresion -> . expresion MENORQUE expresion
    (48) expresion -> . expresion MAYORQUE expresion
    (49) expresion -> . expresion LEQT expresion
    (50) expresion -> . expresion GEQT expresion
    (51) expresion -> . expresion EQUAL expresion
    (52) expresion -> . expresion DIFER expresion
    (53) expresion -> . LPAREN expresion RPAREN MENORQUE LPAREN expresion RPAREN
    (54) expresion -> . LPAREN expresion RPAREN MAYORQUE LPAREN expresion RPAREN
    (55) expresion -> . LPAREN expresion RPAREN LEQT LPAREN expresion RPAREN
    (56) expresion -> . LPAREN expresion RPAREN GEQT LPAREN expresion RPAREN
    (57) expresion -> . LPAREN expresion RPAREN ASIGN LPAREN expresion RPAREN
    (58) expresion -> . LPAREN expresion RPAREN DIFER LPAREN expresion RPAREN
    (59) comentario -> . COMMENT
    (22) impresion_puts -> . PUTS TEXT
    (23) impresion_puts -> . PUTS NUMBER
    (24) impresion_puts -> . PUTS SYMBOL
    (13) expresion_valor -> . NUMBER
    (14) expresion_valor -> . TEXT
    (25) estructura_control -> . bloque_if END
    (26) estructura_control -> . bloque_if else END
    (27) estructura_control -> . bloque_for
    (28) bloque_if -> . IF boolean sentencia
    (29) bloque_if -> . IF comparacion sentencia
    (30) bloque_if -> . IF comparacion EQUAL boolean sentencia
    (37) bloque_for -> . FOR SYMBOL IN rango sentencia END

    LPAREN          shift and go to state 9
    COMMENT         shift and go to state 16
    PUTS            shift and go to state 17
    NUMBER          shift and go to state 11
    TEXT            shift and go to state 12
    IF              shift and go to state 20
    FOR             shift and go to state 21

    expresion                      shift and go to state 47
    comentario                     shift and go to state 5
    impresion_puts                 shift and go to state 6
    expresion_valor                shift and go to state 7
    estructura_control             shift and go to state 8
    bloque_if                      shift and go to state 18
    bloque_for                     shift and go to state 19

state 23

    (42) expresion -> expresion OR . expresion
    (9) expresion -> . comentario
    (10) expresion -> . impresion_puts
    (11) expresion -> . expresion_valor
    (12) expresion -> . estructura_control
    (41) expresion -> . expresion AND expresion
    (42) expresion -> . expresion OR expresion
    (43) expresion -> . expresion NOT expresion
    (44) expresion -> . LPAREN expresion AND expresion RPAREN
    (45) expresion -> . LPAREN expresion OR expresion RPAREN
    (46) expresion -> . LPAREN expresion NOT expresion RPAREN
    (47) expresion -> . expresion MENORQUE expresion
    (48) expresion -> . expresion MAYORQUE expresion
    (49) expresion -> . expresion LEQT expresion
    (50) expresion -> . expresion GEQT expresion
    (51) expresion -> . expresion EQUAL expresion
    (52) expresion -> . expresion DIFER expresion
    (53) expresion -> . LPAREN expresion RPAREN MENORQUE LPAREN expresion RPAREN
    (54) expresion -> . LPAREN expresion RPAREN MAYORQUE LPAREN expresion RPAREN
    (55) expresion -> . LPAREN expresion RPAREN LEQT LPAREN expresion RPAREN
    (56) expresion -> . LPAREN expresion RPAREN GEQT LPAREN expresion RPAREN
    (57) expresion -> . LPAREN expresion RPAREN ASIGN LPAREN expresion RPAREN
    (58) expresion -> . LPAREN expresion RPAREN DIFER LPAREN expresion RPAREN
    (59) comentario -> . COMMENT
    (22) impresion_puts -> . PUTS TEXT
    (23) impresion_puts -> . PUTS NUMBER
    (24) impresion_puts -> . PUTS SYMBOL
    (13) expresion_valor -> . NUMBER
    (14) expresion_valor -> . TEXT
    (25) estructura_control -> . bloque_if END
    (26) estructura_control -> . bloque_if else END
    (27) estructura_control -> . bloque_for
    (28) bloque_if -> . IF boolean sentencia
    (29) bloque_if -> . IF comparacion sentencia
    (30) bloque_if -> . IF comparacion EQUAL boolean sentencia
    (37) bloque_for -> . FOR SYMBOL IN rango sentencia END

    LPAREN          shift and go to state 9
    COMMENT         shift and go to state 16
    PUTS            shift and go to state 17
    NUMBER          shift and go to state 11
    TEXT            shift and go to state 12
    IF              shift and go to state 20
    FOR             shift and go to state 21

    expresion                      shift and go to state 48
    comentario                     shift and go to state 5
    impresion_puts                 shift and go to state 6
    expresion_valor                shift and go to state 7
    estructura_control             shift and go to state 8
    bloque_if                      shift and go to state 18
    bloque_for                     shift and go to state 19

state 24

    (43) expresion -> expresion NOT . expresion
    (9) expresion -> . comentario
    (10) expresion -> . impresion_puts
    (11) expresion -> . expresion_valor
    (12) expresion -> . estructura_control
    (41) expresion -> . expresion AND expresion
    (42) expresion -> . expresion OR expresion
    (43) expresion -> . expresion NOT expresion
    (44) expresion -> . LPAREN expresion AND expresion RPAREN
    (45) expresion -> . LPAREN expresion OR expresion RPAREN
    (46) expresion -> . LPAREN expresion NOT expresion RPAREN
    (47) expresion -> . expresion MENORQUE expresion
    (48) expresion -> . expresion MAYORQUE expresion
    (49) expresion -> . expresion LEQT expresion
    (50) expresion -> . expresion GEQT expresion
    (51) expresion -> . expresion EQUAL expresion
    (52) expresion -> . expresion DIFER expresion
    (53) expresion -> . LPAREN expresion RPAREN MENORQUE LPAREN expresion RPAREN
    (54) expresion -> . LPAREN expresion RPAREN MAYORQUE LPAREN expresion RPAREN
    (55) expresion -> . LPAREN expresion RPAREN LEQT LPAREN expresion RPAREN
    (56) expresion -> . LPAREN expresion RPAREN GEQT LPAREN expresion RPAREN
    (57) expresion -> . LPAREN expresion RPAREN ASIGN LPAREN expresion RPAREN
    (58) expresion -> . LPAREN expresion RPAREN DIFER LPAREN expresion RPAREN
    (59) comentario -> . COMMENT
    (22) impresion_puts -> . PUTS TEXT
    (23) impresion_puts -> . PUTS NUMBER
    (24) impresion_puts -> . PUTS SYMBOL
    (13) expresion_valor -> . NUMBER
    (14) expresion_valor -> . TEXT
    (25) estructura_control -> . bloque_if END
    (26) estructura_control -> . bloque_if else END
    (27) estructura_control -> . bloque_for
    (28) bloque_if -> . IF boolean sentencia
    (29) bloque_if -> . IF comparacion sentencia
    (30) bloque_if -> . IF comparacion EQUAL boolean sentencia
    (37) bloque_for -> . FOR SYMBOL IN rango sentencia END

    LPAREN          shift and go to state 9
    COMMENT         shift and go to state 16
    PUTS            shift and go to state 17
    NUMBER          shift and go to state 11
    TEXT            shift and go to state 12
    IF              shift and go to state 20
    FOR             shift and go to state 21

    expresion                      shift and go to state 49
    comentario                     shift and go to state 5
    impresion_puts                 shift and go to state 6
    expresion_valor                shift and go to state 7
    estructura_control             shift and go to state 8
    bloque_if                      shift and go to state 18
    bloque_for                     shift and go to state 19

state 25

    (47) expresion -> expresion MENORQUE . expresion
    (9) expresion -> . comentario
    (10) expresion -> . impresion_puts
    (11) expresion -> . expresion_valor
    (12) expresion -> . estructura_control
    (41) expresion -> . expresion AND expresion
    (42) expresion -> . expresion OR expresion
    (43) expresion -> . expresion NOT expresion
    (44) expresion -> . LPAREN expresion AND expresion RPAREN
    (45) expresion -> . LPAREN expresion OR expresion RPAREN
    (46) expresion -> . LPAREN expresion NOT expresion RPAREN
    (47) expresion -> . expresion MENORQUE expresion
    (48) expresion -> . expresion MAYORQUE expresion
    (49) expresion -> . expresion LEQT expresion
    (50) expresion -> . expresion GEQT expresion
    (51) expresion -> . expresion EQUAL expresion
    (52) expresion -> . expresion DIFER expresion
    (53) expresion -> . LPAREN expresion RPAREN MENORQUE LPAREN expresion RPAREN
    (54) expresion -> . LPAREN expresion RPAREN MAYORQUE LPAREN expresion RPAREN
    (55) expresion -> . LPAREN expresion RPAREN LEQT LPAREN expresion RPAREN
    (56) expresion -> . LPAREN expresion RPAREN GEQT LPAREN expresion RPAREN
    (57) expresion -> . LPAREN expresion RPAREN ASIGN LPAREN expresion RPAREN
    (58) expresion -> . LPAREN expresion RPAREN DIFER LPAREN expresion RPAREN
    (59) comentario -> . COMMENT
    (22) impresion_puts -> . PUTS TEXT
    (23) impresion_puts -> . PUTS NUMBER
    (24) impresion_puts -> . PUTS SYMBOL
    (13) expresion_valor -> . NUMBER
    (14) expresion_valor -> . TEXT
    (25) estructura_control -> . bloque_if END
    (26) estructura_control -> . bloque_if else END
    (27) estructura_control -> . bloque_for
    (28) bloque_if -> . IF boolean sentencia
    (29) bloque_if -> . IF comparacion sentencia
    (30) bloque_if -> . IF comparacion EQUAL boolean sentencia
    (37) bloque_for -> . FOR SYMBOL IN rango sentencia END

    LPAREN          shift and go to state 9
    COMMENT         shift and go to state 16
    PUTS            shift and go to state 17
    NUMBER          shift and go to state 11
    TEXT            shift and go to state 12
    IF              shift and go to state 20
    FOR             shift and go to state 21
